# python-github-actions-starter

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: main.py  math_ops.py
tests/: test_api.py  test_math_ops.py
